--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -16,7 +16,7 @@ jobs:
             - goarch: arm64
               goos: windows
             - goarch: amd64
-              gooes: darwin
+              goos: darwin
       steps:
       - uses: actions/checkout@v4
       - uses: wangyoucao577/go-release-action@v1.53
